--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -7,10 +7,10 @@
         android:icon="@mipmap/ic_sort"
         android:title="@string/action_sort"
         app:showAsAction="ifRoom" />
-    <item
+    <!--<item
         android:id="@+id/action_slovar"
         android:title="Slovar gob"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
     <!-- Settings, should always be in the overflow -->
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
