--- a/app/src/main/res/layout/activity_location_read_only.xml
+++ b/app/src/main/res/layout/activity_location_read_only.xml
@@ -15,7 +15,6 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:cropToPadding="false"
-        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/myColorLine1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,25 +51,32 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/llmap" />
 
-    <EditText
+    <TextView
+        android:id="@+id/colorline4"
+        android:layout_width="0dp"
+        android:layout_height="3dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="16dp"
+        app:layout_constraintTop_toTopOf="@+id/scrollView"
+        android:layout_marginTop="0dp"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <TextView
         android:id="@+id/editTextName"
         android:layout_width="0dp"
         android:layout_height="43dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:enabled="false"
-        android:inputType="none"
-        android:singleLine="true"
-        android:text="Gobice"
+        android:layout_marginTop="0dp"
+        android:text="TextView"
         android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/llmap" />
+        app:layout_constraintTop_toBottomOf="@+id/myColorLine2" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline3"
@@ -78,9 +84,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.3"
-        tools:layout_editor_absoluteX="115dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintGuide_percent="0.20" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline4"
@@ -156,13 +160,14 @@
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextName"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/editTextName">
 
         <com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -183,4 +188,21 @@
 
         </com.google.android.flexbox.FlexboxLayout>
     </ScrollView>
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/circleImageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onClickMapDirection"
+        android:src="@drawable/direction_icon"
+        app:civ_border_color="#FFFFFF"
+        app:civ_border_width="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/myColorLine3"
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
