--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -6,7 +6,8 @@
         android:id="@+id/action_sort"
         android:icon="@mipmap/ic_sort"
         android:title="@string/action_sort"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="always" />
+
     <!--<item
         android:id="@+id/action_slovar"
         android:title="Slovar gob"
@@ -15,5 +16,4 @@
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
-
 </menu>
