--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -15,6 +15,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:cropToPadding="false"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/myColorLine1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -111,7 +112,7 @@
         android:layout_marginBottom="3dp"
         android:background="@color/colorWhiteTrans"
         android:text="TextView"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintRight_toRightOf="parent"
@@ -123,7 +124,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorWhiteTrans"
         android:text="TextView"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintRight_toRightOf="parent"
