--- a/app/src/main/res/layout/activity_location_read_only.xml
+++ b/app/src/main/res/layout/activity_location_read_only.xml
@@ -15,13 +15,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:cropToPadding="false"
+        android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@+id/myColorLine1"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/goba" />
+        app:srcCompat="@drawable/goba1" />
 
     <TextView
         android:id="@+id/myColorLine1"
@@ -121,7 +122,7 @@
         android:background="@color/colorWhiteTrans"
         android:enabled="false"
         android:text="TextView"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintRight_toRightOf="parent"
@@ -134,7 +135,7 @@
         android:background="@color/colorWhiteTrans"
         android:enabled="false"
         android:text="TextView"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintRight_toRightOf="parent"
