--- a/app/src/main/res/layout/activity_zacetna_content.xml
+++ b/app/src/main/res/layout/activity_zacetna_content.xml
@@ -97,7 +97,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
-        android:background="@drawable/com_facebook_button_login_background"
+        android:background="@color/colorPrimaryDark"
         android:onClick="onClickOdjava"
         android:text="Odjava"
         app:layout_constraintBottom_toBottomOf="parent"
