--- a/app/src/main/res/layout/activity_zacetna.xml
+++ b/app/src/main/res/layout/activity_zacetna.xml
@@ -18,12 +18,14 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:backgroundTint="@color/colorPrimary"
-        app:srcCompat="@android:drawable/ic_input_add" />
+        app:srcCompat="@android:drawable/ic_input_add"
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="501dp" />
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
