--- a/app/src/main/res/layout/activity_zacetna_content.xml
+++ b/app/src/main/res/layout/activity_zacetna_content.xml
@@ -96,10 +96,10 @@
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="onClickOdjava"
         android:text="Odjava"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
