5.Teden(Dodano/Popravljeno)
Popravljeno:
- aplikacija se ne "crasha", če izberemo share on FB, nato pa pritisnemo gumb nazaj
- aplikacija se ne "crasha", če kliknemo gumb nazaj ko slikamo gobo oz. želimo dodati novo lokacijo gobe

Dodano:
- narejena ikona aplikacije
- dodan Splash screen
- posnet video o aplikaciji

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -57,13 +57,11 @@
         android:id="@+id/editTextName"
         android:layout_width="0dp"
         android:layout_height="43dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:hint="Poimenuj"
         android:singleLine="true"
-        android:text="Gobice"
         android:textAlignment="center"
         android:textStyle="bold"
         app:layout_constraintHorizontal_bias="0.0"
